# yt-kaggle-playground-series-s5e8

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: custom-instructions.md  ruff.yml
data/: README.md
