[project]
name = "yt-kaggle-playground-series-s5e8"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas==2.3.2",
    "numpy==2.3.2",
    "scikit-learn==1.7.1",
    "lightgbm==4.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
